--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,10 @@
 .navDiv{
-    background-color: gray;
-    color: white;
+    background-color: orange;
+    color: skyblue;
     padding: 10px;
 }
 .Link{
-    color : white;
+    color : skyblue;
     text-decoration: none;
     padding: 10px;
 }
